--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 								<dt>Sa</dt>
 								<dd>08:00 am - 12:00 pm</dd>
 								<dt>Do</dt>
-								<dd>Free day</dd>
+								<dd>Cerrado</dd>
 							</dl>
 							
 						</section>
